Removed some new Integer(...)